feat: implemented Binding Result in SQLStatements